Threaded the hell outta it

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@ venv
 credentials/credentials.json
 copydir
 mountdir
+src/gdfs/token.pickle
+src/gdfs/root
+src/gdfs/credentials.json
+src/gdfs/__pycache__
 
